Made a rock and finished the file cleanup

--- a/DGM-4310_SeniorProject/Interactive3DMap/Assembly-CSharp.csproj
+++ b/DGM-4310_SeniorProject/Interactive3DMap/Assembly-CSharp.csproj
@@ -61,19 +61,19 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\MouseLook.cs" />
-    <Compile Include="Assets\Scripts\CameraMove.cs" />
     <Compile Include="Assets\Scripts\Container.cs" />
-    <Compile Include="Assets\Scripts\CreateGraph.cs" />
-    <Compile Include="Assets\Scripts\Elevator.cs" />
-    <Compile Include="Assets\Scripts\ElevatorMove.cs" />
-    <Compile Include="Assets\Scripts\ElevatorMovement.cs" />
     <Compile Include="Assets\Scripts\ElevatorTele.cs" />
-    <Compile Include="Assets\Scripts\Movement\UserMovement.cs" />
-    <Compile Include="Assets\Scripts\NewNav.cs" />
-    <Compile Include="Assets\Scripts\PointToPoint.cs" />
-    <Compile Include="Assets\Scripts\Spanner.cs" />
-    <Compile Include="Assets\Test.cs" />
+    <Compile Include="Assets\Scripts\Misc\CameraMove.cs" />
+    <Compile Include="Assets\Scripts\Misc\Elevator.cs" />
+    <Compile Include="Assets\Scripts\Misc\ElevatorMove.cs" />
+    <Compile Include="Assets\Scripts\Misc\ElevatorMovement.cs" />
+    <Compile Include="Assets\Scripts\Misc\PointToPoint.cs" />
+    <Compile Include="Assets\Scripts\Misc\Test.cs" />
+    <Compile Include="Assets\Scripts\UserScripts\CreateGraph.cs" />
+    <Compile Include="Assets\Scripts\UserScripts\MouseLook.cs" />
+    <Compile Include="Assets\Scripts\UserScripts\Movement\UserMovement.cs" />
+    <Compile Include="Assets\Scripts\UserScripts\NewNav.cs" />
+    <Compile Include="Assets\Scripts\UserScripts\Spanner.cs" />
     <Reference Include="UnityEditor.StandardEvents">
       <HintPath>C:/Github/FALL-2018/DGM-4310_SeniorProject/Interactive3DMap/Library/ScriptAssemblies/UnityEditor.StandardEvents.dll</HintPath>
     </Reference>
